refactor: Order, OrderItem 연관관계 재설정